--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "percircle",
   "version": "1.0.4",
-  "description": "Percircle: the jQuery percentage circle.",
+  "description": "CSS percentage circle built with jQuery selectors.",
   "main": "js/percircle.js",
   "repository": {
     "type": "git",
