--- a/package.json
+++ b/package.json
@@ -24,5 +24,15 @@
   "bugs": {
     "url": "https://github.com/toubou91/percircle/issues"
   },
-  "homepage": "https://github.com/toubou91/percircle#readme"
+  "homepage": "https://github.com/toubou91/percircle#readme",
+  "devDependencies": {
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.1",
+    "gulp-stats": "0.0.3",
+    "gulp-uglify": "^1.5.2",
+    "gulp-watch": "^4.3.5",
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0"
+  }
 }
