--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-cssnano": "^2.1.1",
+    "gulp-jshint": "^2.0.1",
     "gulp-stats": "0.0.3",
     "gulp-uglify": "^1.5.2",
     "gulp-watch": "^4.3.5",
