--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-uglify": "^1.5.2",
     "gulp-watch": "^4.3.5",
     "jshint": "^2.9.2",
-    "jshint-stylish": "^2.1.0"
+    "jshint-stylish": "^2.1.0",
+	"jshint-stylish-summary": "^0.1.2"
   }
 }
