--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "webpack": "4.41.2",
     "webpack-cli": "3.3.9",
     "webpack-dev-server": "3.8.2",
-    "webpack-merge": "4.2.2"
+    "webpack-merge": "4.2.2",
+    "webpack-rtl-plugin": "2.0.0"
   },
   "browserslist": [
     "last 4 versions"
