--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "CSS percentage circle built with jQuery selectors.",
   "main": "dist/js/percircle.js",
   "authors": [
-    "Thodoris Bais"
+    "Teo Bais"
   ],
   "license": "MIT",
   "keywords": [
@@ -13,7 +13,7 @@
     "circle",
     "ui"
   ],
-  "homepage": "https://github.com/toubou91/percircle",
+  "homepage": "https://github.com/teobais/percircle",
   "moduleType": [
     "amd",
     "node"
